--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "@vimeo/player": "^2.10.0"
+        "@vimeo/player": "^2.10.0",
+        "sweetalert2": "^9.7.2"
     }
 }
